--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("bg.jpg");
+  background-image: url("mountains_and_sky_reflections-1920x1080.jpg");
 }
 h1{
   text-align:center;
