--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@ h1{
   color:#4c2db1;
   font-family:Arial Black;
 }
+   iframe {
+      max-width: 100%;
+      max-height:100%;
+      /* Force Correct Aspect Ratio */
+      height: auto !important;
+    }
+
 ul {
   list-style-type: none;
   margin: 0;
