--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ h1{
 }
    iframe {
       max-width: 100%;
+      max-height: 100%;
       /* Force Correct Aspect Ratio */
       height: auto !important;
     }
