--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,28 @@ h1{
   color:#4c2db1;
   font-family:Arial Black;
 }
-   iframe {
-      max-width: 100%;
-      max-height: 100%;
-      /* Force Correct Aspect Ratio */
-      height: auto !important;
+   
+
+    .videoResponsive {
+    	padding-bottom:56.25%;
+      height:0;
+      position:relative;
+    	padding-top:30px;
+    	overflow:hidden;
     }
+    .videoResponsive iframe, 
+    .videoResponsive object, 
+    .videoResponsive embed {
+    	position:absolute;
+    	left:0;
+      top:0;
+    	width:100%;
+    	height:100%;
+    }
+
+
+
+
 
 ul {
   list-style-type: none;
