--- a/styles.css
+++ b/styles.css
@@ -7,24 +7,21 @@ h1{
   font-family:Arial Black;
 }
    
+.video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
 
-    .videoResponsive {
-    	padding-bottom:56.25%;
-      height:0;
-      position:relative;
-    	padding-top:30px;
-    	overflow:hidden;
-    }
-    .videoResponsive iframe, 
-    .videoResponsive object, 
-    .videoResponsive embed {
-    	position:absolute;
-    	left:0;
-      top:0;
-    	width:100%;
-    	height:100%;
-    }
-
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
 
 
 
