--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,12 @@ h1{
   display: flex;
   /*justify-content: center;*/
   align-items: center;
+	
+  /*IMPORTANTE*/
+  height: 100px;
+  position: absolute;
+  top: 50%;
+  margin-top: -50px;
 }
 
 
